--- a/Demo-Module/Demo-Module/Objects/test.build_log.htm
+++ b/Demo-Module/Demo-Module/Objects/test.build_log.htm
@@ -22,15 +22,22 @@ Dialog DLL:      TCM.DLL V1.14.5.0
  
 <h2>Project:</h2>
 C:\Users\28646\Desktop\embedded system\Demo-Module\Demo-Module\test.uvprojx
-Project File Date:  11/05/2025
+Project File Date:  11/26/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.05 update 2 (build 169)', folder: 'C:\Keil_v5.15\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling NEG.c...
+compiling UART.c...
+user\UART.c(135): warning:  #223-D: function "memcpy" declared implicitly
+      memcpy(USART_Txbuf, msg, SendBufLen);
+user\UART.c(194): warning:  #223-D: function "memcpy" declared implicitly
+      memcpy((void*)USART_Txbuf, buf, len);
+user\UART.c(296): warning:  #1-D: last line of file ends without a newline
+  }
+user\UART.c: 3 warnings, 0 errors
 linking...
-Program Size: Code=3244 RO-data=316 RW-data=44 ZI-data=628  
-".\Objects\test.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=4020 RO-data=336 RW-data=76 ZI-data=13428  
+".\Objects\test.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
   C:\Users\28646\Desktop\embedded system\Demo-Module\Demo-Module\RTE
